Update InkLikeEngine.java